src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AreaCues__c</fullName>
        <label>线索所属区域</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BasicMedical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>基础医疗</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>市</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CooperativeDealer__c</fullName>
        <label>已合作经销商</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>县</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CueEntry__c</fullName>
        <label>线索录入人</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerOwner__c</fullName>
        <label>客户所有人</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailedAddress__c</fullName>
        <label>详细地址</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entry__c</fullName>
        <label>录入人所属</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HospitalCategory__c</fullName>
        <label>医院类别</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>综合</fullName>
                </value>
                <value>
                    <fullName>专科</fullName>
                </value>
                <value>
                    <fullName>教学</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalFunction__c</fullName>
        <label>医院职能</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>眼科</fullName>
                </value>
                <value>
                    <fullName>非眼科</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HospitalNature__c</fullName>
        <label>医院性质</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>公立</fullName>
                </value>
                <value>
                    <fullName>单体民营</fullName>
                </value>
                <value>
                    <fullName>集团公司</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MajorDealers__c</fullName>
        <label>主要经销商</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewHospital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>新建医院</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutpatientVolume__c</fullName>
        <label>眼科年门诊量</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>职务</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>省</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesVolume__c</fullName>
        <label>眼科年营业额（万元)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ThreadProduct__c</fullName>
        <label>线索涉及产品</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>